# ExcersisesForProgrammers

./: .gitignore  README.md
30DaysOfCode/Day00/: hello-world.rkt
30DaysOfCode/Day02/: tip-calculator.rkt
30DaysOfCode/Day03/: conditionals.rkt
30DaysOfCode/Day05/: loops.rkt
30DaysOfCode/Day06/: lets-review.rkt
30DaysOfCode/Day07/: arrays.rkt
30DaysOfCode/Day08/: dictionaries-and-maps.rkt
30DaysOfCode/Day09/: factorial.rkt
30DaysOfCode/Day10/: binary-numbers.rkt
30DaysOfCode/Day11/: 2d-arrays.rkt
30DaysOfCode/Day12/: inheritance.py
30DaysOfCode/Day16/: exceptions.py
30DaysOfCode/Day18/: stacks_queues.py
30DaysOfCode/Day20/: sorting.rkt
30DaysOfCode/Day25/: prime-numbers.rkt
30DaysOfCode/Day26/: nested-logic.rkt
30DaysOfCode/Day28/: regex-patterns.rkt  testing.rkt
30DaysOfCode/Day29/: bitwise.rkt
CheckIO/Home/: most-wanted-letter.py  password_strength.py
CodeInGame/ascii-art/: CHANGELOG.md  README.md  project.clj
CodeInGame/descent/: CHANGELOG.md  README.md  project.clj
CodeInGame/temperature/: CHANGELOG.md  README.md  project.clj
CodeInGame/thor/: CHANGELOG.md  README.md  project.clj
HackerRank/FunctionalProgramming/: evaluating-e-x.rkt  evaluating-e^x.rkt  evaluating-ex.rkt  hello-world-n-times.rkt  list-replication.rkt  remove-duplicates.lisp  remove-duplicates.rkt  rotate-string.rkt  (+3 more)
LetOverLambda/: let-over-lambda-test.lisp
c++/sol_01/Sol01/: CMakeLists.txt
c++/sol_01/Sol01/src/: Sol01.cpp  Sol01.hpp  main.cpp
racket/: basic.rkt  find-product.rkt  realm-of-racket-chapter-4.rkt  stdin-stdout.rkt  tip-calculator-gui.rkt
(+237 files in other folders)
